--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
             "error",
             4
         ],
+        "react/prop-types": "off",
         "linebreak-style": [
             "error",
             "windows"
